--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
+    "react-easy-crop": "^5.5.3",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.8.1",
