--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "twemoji": "^14.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
