--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.987.0",
     "@floating-ui/react": "^0.27.16",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
@@ -20,6 +21,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mime-types": "^3.0.2",
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
@@ -28,7 +30,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
-    "react-easy-crop": "^5.5.3",
+    "react-easy-crop": "^5.5.6",
     "react-player": "^3.4.0",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
